webhook-configuration.yaml
kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: opa-validating-webhook
webhooks:
  - name: validating-webhook.openpolicyagent.org
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["*"]
      - operations: ["DELETE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["namespace"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNyRENDQVpRQ0NRRGtaVW9CSnN0TWVUQU5CZ2txaGtpRzl3MEJBUXNGQURBWE1SVXdFd1lEVlFRRERBeGgKWkcxcGMzTnBiMjVmWTJFd0lCY05NVGt3TXpBMk1UUXdOelUxV2hnUE1qSTVNakV5TVRreE5EQTNOVFZhTUJjeApGVEFUQmdOVkJBTU1ER0ZrYldsemMybHZibDlqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDCkFRb0NnZ0VCQU5rZ0RJOUoyT1ZLZHJQUjRCQkhjTUZHUEs4OTRNR1BJUUZVZzB3TUVXdUVZa3VXL0ZiZTRIU3UKL1RGVnRtNjlOQ3I5MTdWTHNTOGxqL1pKZ2xoS1ZRQXNpYW9xMHovdlUzcHNGd0pVVWEwTUdvWmh3TWRETURNQgpjYWU3Zjl0V0tU [...]
      service:
        namespace: opa
        name: opa
